add contour MVT service